JavaScript for https://apsc.ubc.ca and https://engineering.ubc.ca

--- a/APSC-ENG/styles/scss/actions.scss
+++ b/APSC-ENG/styles/scss/actions.scss
@@ -35,7 +35,7 @@ a.btn
 	color:$White;
 	text-decoration:none;
 }
-//--accordions
+//--accordions - note accordions work with JS; 
 .accordion, .ui-accordion
 {
 	.accordion-tab, .ui-accordion-header
