--- a/APSC-ENG/styles/scss/main.scss
+++ b/APSC-ENG/styles/scss/main.scss
@@ -1,3 +1,9 @@
+/*!
+ * APSC / ENG ( https://github.com/UBC-APSC/Applied-science )
+ * @copyright 2017 UBC APSC.
+ * @license MIT ( https://github.com/UBC-APSC/Applied-science/blob/master/LICENSE )
+ */
+
 //--import variables and mixins
 @import "variables/variables.scss";
 @import "mixins/mixins.scss";
