SCSS source generating the CSS for https://apsc.ubc.ca and https://engineering.ubc.ca

--- a/APSC-ENG/styles/scss/main.scss
+++ b/APSC-ENG/styles/scss/main.scss
@@ -1,4 +1,4 @@
-/*!
+/*
  * APSC / ENG ( https://github.com/UBC-APSC/Applied-science )
  * @copyright 2017 UBC APSC.
  * @license MIT ( https://github.com/UBC-APSC/Applied-science/blob/master/LICENSE )
